46
================

20/04/22 Option to hide looking for (Peter Van Caeseele) #1034
20/04/22 Option to email login credentials when creating a user account #362
19/04/22 wordkeys: Extra DisplayXIf tokens for entire/neutered animals
19/04/22 csvimport: fix bug where warnings were logged for blank image/pdf rows
19/04/22 Query builder: support payment records #1116
19/04/22 Datepickers disable choice of future dates in give dialogs
18/04/22 Query builder: support combined medical data #1116
18/04/22 Query builder: test for additional fields with/without value #1122
17/04/22 Updated Swedish translation (Carina Lekare)
11/04/22 move_* screens: if first lookup item was inactive it still displayed
05/04/22 All publishers: FTP photo upload uses IDs rather than medianame #1117
05/04/22 PetFinder: Fix photo urls to use IDs rather than names #1117
30/03/22 SavourLife: Support sending bonded animals
30/03/22 CSV import: Fix for merging ANIMALFLAGS
27/03/22 Fix decoding bug when using SQL Interface->Execute Script
26/03/22 Add Mozambique en/pt locales
24/03/22 Use safer/quicker regex rather than DOM for removing HTML tags 
23/03/22 Adoption checkout causing blank payment types from movement tab
23/03/22 SQL interface counting select query results off by 1
23/03/22 Docs: Do not include boarding in TOTALCOSTS for off-shelter animals
23/03/22 Use DOCMEDIAID not name for document images, stop issues with duplicates
22/03/22 Dialogs were showing last changed instead of created time
21/03/22 csvimport: Support ORIGINALOWNERFLAGS column
21/03/22 Setting location+unit via bulk change animals now writes log entries
21/03/22 Stack nested tables vertically on mobile to prevent h scroll #1103
19/03/22 Remove redundant tooltips from animals, add callouts/placeholders
19/03/22 Fix CurrentOwnerFirstname/Lastname tokens for non-shelter animals
17/03/22 Prevent endless loop with collisions using OOO coding scheme
17/03/22 Bulk change animals can now remove flags #1112