@@ -1,6 +1,7 @@
 46
 ================
 
+21/04/22 SavourLife: do not send animals without a photo
 20/04/22 Option to hide looking for (Peter Van Caeseele) #1034
 20/04/22 Option to email login credentials when creating a user account #362
 19/04/22 wordkeys: Extra DisplayXIf tokens for entire/neutered animals
